2015-02-03 belangeo <belangeo@gmail.com>

    * Added getServer, getSamplingRate and getBufferSize to PyoObjectBase. These methods can be 
    accessed from any pyo objects.
    - rev 1290

2015-02-03 belangeo <belangeo@gmail.com>

    * Fixed a bug with class method referenced inside pyo object. Save them as weak reference, 
    allowing the garbage collector to properly delete the objects when reference count falls to 0.
    - rev 1289

2015-02-02 belangeo <belangeo@gmail.com>

    * Added new objet: TableWrite, records values in a table at arbitrary location.
    - rev 1288

2015-01-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.4
    - rev 1284

2015-01-29 belangeo <belangeo@gmail.com>

    * Added new function: floatmap, 0-1 range mapper. Fixed bug in DataTable initialization 
    and added an automatic refresh of the DataTable grapher window.
    - rev 1282

2015-01-26 belangeo <belangeo@gmail.com>

    * Added new objet: Particle, a full control granular synthesis generator.
    - rev 1281

2015-01-24 belangeo <belangeo@gmail.com>

    * Added setSync method to Granule object. Allow to toggle between synchronous 
    and asynchronous granulation. Added noteon and noteoff trigger streams to Notein 
    object.

    - rev 1280

2014-12-15 belangeo <belangeo@gmail.com>

    * Added reset method to CtlScan and CtlScan2 objects.
    - rev 1279

2014-12-03 belangeo <belangeo@gmail.com>

    * Added new objet: PeakAmp, a peak amplitude follower.
    - rev 1277

2014-11-27 belangeo <belangeo@gmail.com>

    * Added reset method to Beat and Euclide objects.
    - rev 1275

-------------------------------------------------------------------------------------

2014-10-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.3.
    - rev 1273

2014-11-15 belangeo <belangeo@gmail.com>

    * Added new objet: Scope, an audio waveform display.
    - rev 1270

2014-11-12 belangeo <belangeo@gmail.com>

    * E-Pyo: Fix marker's line numbering.
    - rev 1267
