@@ -1,3 +1,9 @@
+2015-02-07 belangeo <belangeo@gmail.com>
+
+    * E-Pyo: Added a menu item to set a master document (the one that will be executed whatever 
+    which one has the focus).
+    - rev 1291
+
 2015-02-03 belangeo <belangeo@gmail.com>
 
     * Added getServer, getSamplingRate and getBufferSize to PyoObjectBase. These methods can be 
